CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(CityLinkList)
SET(PROJECT_URL https://github.com/bugprogram-git/CityLinkList)
SET(PROJECT_ISSUE_URL https://github.com/bugprogram-git/CityLinkList)
SET(EXECUTABLE_OUTPUT_PATH bin)
SET(LIBRARY_OUTPUT_PATH lib)
SET(CMAKE_SYSTEM_PROCESSOR i686)
SET(CMAKE_SYSTEM_NAME LINUX)
SET(CMAKE_SYSTEM_VERSION 5.15.0)
INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src SOURCE_DIR)
LINK_LIBRARIES(m)
ADD_EXECUTABLE(CityLinkList ${SOURCE_DIR})
